manifests/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapp-backend
  labels:
    app.kubernetes.io/name: backend
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
